src/decklinkcapi/cpp/decklinkcapi.h

class IDeckLinkDiscovery;
class IDeckLinkDeviceNotificationCallback;
class IDeckLinkVideoBuffer;
class IDeckLinkVideoOutputCallback;
class IUnknown;
typedef void IDeckLink;
typedef void IDeckLinkDiscovery;
typedef void IDeckLinkDeviceNotificationCallback;
typedef void IDeckLinkVideoBuffer;
typedef void IDeckLinkVideoFrame;
typedef void IDeckLinkVideoOutputCallback;
typedef void IUnknown;
typedef void (*deviceNotificationCallback_t)(IDeckLink* device);
typedef void (*scheduledFrameCompletionCallback_t)(IDeckLinkVideoFrame* frame, int result);
CAPI IDeckLinkDeviceNotificationCallback* IDeckLinkDeviceNotificationCallback_Create(deviceNotificationCallback_t arrivedCallback, deviceNotificationCallback_t removedCallback);
CAPI IDeckLinkVideoOutputCallback* IDeckLinkVideoOutputCallback_Create(scheduledFrameCompletionCallback_t callback);
CAPI IDeckLinkVideoBuffer* IDeckLinkVideoBuffer_Create(void* bytes);
CAPI void IUnknown_AddRef(IUnknown* object);
CAPI void IUnknown_Release(IUnknown* object);
CAPI IDeckLinkDiscovery* IDeckLinkDiscovery_Create(void);
CAPI bool IDeckLinkDiscovery_InstallDeviceNotifications(IDeckLinkDiscovery* discovery, IDeckLinkDeviceNotificationCallback* callback);