src/main/java/com/loadingbyte/cinecred/natives/decklinkcapi/decklinkcapi_h.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * IDeckLinkDeviceNotificationCallback *IDeckLinkDeviceNotificationCallback_Create(deviceNotificationCallback_t arrivedCallback, deviceNotificationCallback_t removedCallback)
     * }
     */
    public static FunctionDescriptor IDeckLinkDeviceNotificationCallback_Create$descriptor() {
        return IDeckLinkDeviceNotificationCallback_Create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * IDeckLinkDeviceNotificationCallback *IDeckLinkDeviceNotificationCallback_Create(deviceNotificationCallback_t arrivedCallback, deviceNotificationCallback_t removedCallback)
     * }
     */
    public static MethodHandle IDeckLinkDeviceNotificationCallback_Create$handle() {
        return IDeckLinkDeviceNotificationCallback_Create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * IDeckLinkDeviceNotificationCallback *IDeckLinkDeviceNotificationCallback_Create(deviceNotificationCallback_t arrivedCallback, deviceNotificationCallback_t removedCallback)
     * }
     */
    public static MemorySegment IDeckLinkDeviceNotificationCallback_Create$address() {
        return IDeckLinkDeviceNotificationCallback_Create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * IDeckLinkDeviceNotificationCallback *IDeckLinkDeviceNotificationCallback_Create(deviceNotificationCallback_t arrivedCallback, deviceNotificationCallback_t removedCallback)
     * }
     */
    public static MemorySegment IDeckLinkDeviceNotificationCallback_Create(MemorySegment arrivedCallback, MemorySegment removedCallback) {
        var mh$ = IDeckLinkDeviceNotificationCallback_Create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkDeviceNotificationCallback_Create", arrivedCallback, removedCallback);
            }
            return (MemorySegment)mh$.invokeExact(arrivedCallback, removedCallback);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkVideoOutputCallback_Create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkVideoOutputCallback_Create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * IDeckLinkVideoOutputCallback *IDeckLinkVideoOutputCallback_Create(scheduledFrameCompletionCallback_t callback)
     * }
     */
    public static FunctionDescriptor IDeckLinkVideoOutputCallback_Create$descriptor() {
        return IDeckLinkVideoOutputCallback_Create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * IDeckLinkVideoOutputCallback *IDeckLinkVideoOutputCallback_Create(scheduledFrameCompletionCallback_t callback)
     * }
     */
    public static MethodHandle IDeckLinkVideoOutputCallback_Create$handle() {
        return IDeckLinkVideoOutputCallback_Create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * IDeckLinkVideoOutputCallback *IDeckLinkVideoOutputCallback_Create(scheduledFrameCompletionCallback_t callback)
     * }
     */
    public static MemorySegment IDeckLinkVideoOutputCallback_Create$address() {
        return IDeckLinkVideoOutputCallback_Create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * IDeckLinkVideoOutputCallback *IDeckLinkVideoOutputCallback_Create(scheduledFrameCompletionCallback_t callback)
     * }
     */
    public static MemorySegment IDeckLinkVideoOutputCallback_Create(MemorySegment callback) {
        var mh$ = IDeckLinkVideoOutputCallback_Create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkVideoOutputCallback_Create", callback);
            }
            return (MemorySegment)mh$.invokeExact(callback);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkVideoBuffer_Create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkVideoBuffer_Create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * IDeckLinkVideoBuffer *IDeckLinkVideoBuffer_Create(void *bytes)
     * }
     */
    public static FunctionDescriptor IDeckLinkVideoBuffer_Create$descriptor() {
        return IDeckLinkVideoBuffer_Create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * IDeckLinkVideoBuffer *IDeckLinkVideoBuffer_Create(void *bytes)
     * }
     */
    public static MethodHandle IDeckLinkVideoBuffer_Create$handle() {
        return IDeckLinkVideoBuffer_Create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * IDeckLinkVideoBuffer *IDeckLinkVideoBuffer_Create(void *bytes)
     * }
     */
    public static MemorySegment IDeckLinkVideoBuffer_Create$address() {
        return IDeckLinkVideoBuffer_Create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * IDeckLinkVideoBuffer *IDeckLinkVideoBuffer_Create(void *bytes)
     * }
     */
    public static MemorySegment IDeckLinkVideoBuffer_Create(MemorySegment bytes) {
        var mh$ = IDeckLinkVideoBuffer_Create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkVideoBuffer_Create", bytes);
            }
            return (MemorySegment)mh$.invokeExact(bytes);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IUnknown_AddRef {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IUnknown_AddRef");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void IUnknown_AddRef(IUnknown *object)
     * }
     */
    public static FunctionDescriptor IUnknown_AddRef$descriptor() {
        return IUnknown_AddRef.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void IUnknown_AddRef(IUnknown *object)
     * }
     */
    public static MethodHandle IUnknown_AddRef$handle() {
        return IUnknown_AddRef.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void IUnknown_AddRef(IUnknown *object)
     * }
     */
    public static MemorySegment IUnknown_AddRef$address() {
        return IUnknown_AddRef.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void IUnknown_AddRef(IUnknown *object)
     * }
     */
    public static void IUnknown_AddRef(MemorySegment object) {
        var mh$ = IUnknown_AddRef.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IUnknown_AddRef", object);
            }
            mh$.invokeExact(object);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IUnknown_Release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IUnknown_Release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void IUnknown_Release(IUnknown *object)
     * }
     */
    public static FunctionDescriptor IUnknown_Release$descriptor() {
        return IUnknown_Release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void IUnknown_Release(IUnknown *object)
     * }
     */
    public static MethodHandle IUnknown_Release$handle() {
        return IUnknown_Release.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void IUnknown_Release(IUnknown *object)
     * }
     */
    public static MemorySegment IUnknown_Release$address() {
        return IUnknown_Release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void IUnknown_Release(IUnknown *object)
     * }
     */
    public static void IUnknown_Release(MemorySegment object) {
        var mh$ = IUnknown_Release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IUnknown_Release", object);
            }
            mh$.invokeExact(object);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkDiscovery_Create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkDiscovery_Create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * IDeckLinkDiscovery *IDeckLinkDiscovery_Create()
     * }
     */
    public static FunctionDescriptor IDeckLinkDiscovery_Create$descriptor() {
        return IDeckLinkDiscovery_Create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * IDeckLinkDiscovery *IDeckLinkDiscovery_Create()
     * }
     */
    public static MethodHandle IDeckLinkDiscovery_Create$handle() {
        return IDeckLinkDiscovery_Create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * IDeckLinkDiscovery *IDeckLinkDiscovery_Create()
     * }
     */
    public static MemorySegment IDeckLinkDiscovery_Create$address() {
        return IDeckLinkDiscovery_Create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * IDeckLinkDiscovery *IDeckLinkDiscovery_Create()
     * }
     */
    public static MemorySegment IDeckLinkDiscovery_Create() {
        var mh$ = IDeckLinkDiscovery_Create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkDiscovery_Create");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkDiscovery_InstallDeviceNotifications {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkDiscovery_InstallDeviceNotifications");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
